--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "firebase": "^9.17.2",
+    "moment": "^2.29.4",
     "next": "13.2.3",
     "next-share": "^0.19.0",
     "react": "18.2.0",
